<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/titleEditText"
            style="?attr/textAppearanceHeadline1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/dishTitleText"
            android:inputType="textMultiLine"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/dishImageView"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:src="@drawable/ic_block"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/titleEditText" />

        <EditText
            android:id="@+id/urlEditText"
            style="?attr/textAppearanceHeadline4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/urlDishImageText"
            android:inputType="textMultiLine"
            app:layout_constraintEnd_toStartOf="@id/downloadImageButton"
            app:layout_constraintStart_toStartOf="@id/titleEditText"
            app:layout_constraintTop_toBottomOf="@id/barrier2" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/downloadImageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_download"
            app:fabSize="mini"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/urlEditText" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/addTagButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/ic_add_tag"
            app:fabSize="mini"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/titleEditText" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/tagsChipGroup"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toStartOf="@id/addTagButton"
            app:layout_constraintStart_toEndOf="@id/dishImageView"
            app:layout_constraintTop_toBottomOf="@id/titleEditText" />

        <TextView
            style="?attr/textAppearanceHeadline3"
            android:id="@+id/productsCaptionTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/productsCaptionText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/urlEditText" />

        <EditText
            android:id="@+id/productsEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:hint="@string/productsHintText"
            android:lineSpacingExtra="4sp"
            android:textStyle="italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/productsCaptionTextView" />

        <TextView
            style="?attr/textAppearanceHeadline3"
            android:id="@+id/technologyCaptionTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/technologyCaptionText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/productsEditText" />

        <EditText
            android:id="@+id/technologyEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:hint="@string/technologyHintText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/technologyCaptionTextView" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/barrier2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="bottom"
            app:constraint_referenced_ids="dishImageView,tagsChipGroup"
            tools:layout_editor_absoluteY="72dp" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/saveButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="12dp"
            android:layout_marginBottom="12dp"
            android:src="@drawable/ic_save"
            app:fabSize="auto"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>