<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="4dp"
    android:clickable="true"
    android:focusable="true"
    android:minWidth="150dp"
    android:minHeight="150dp"
    app:cardElevation="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/dishImageView"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:adjustViewBounds="true"
                tools:src="@tools:sample/backgrounds/scenic" />

            <ImageView
                android:id="@+id/favoriteImageView"
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:adjustViewBounds="true"
                android:backgroundTint="?attr/colorPrimaryDark"
                tools:src="@drawable/ic_star_border" />

        </LinearLayout>

        <TextView
            android:id="@+id/titleTextView"
            style="?attr/textAppearanceHeadline2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dishTitleText" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/tagsChipGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"></com.google.android.material.chip.ChipGroup>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:layout_margin="4dp"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/editButton"
                style="?attr/borderlessButtonStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="4dp"
                android:layout_weight="1.1"
                android:text="@string/editButtonCaptionText"
                app:icon="@drawable/ic_edit"
                app:iconSize="8dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/deleteButton"
                style="?attr/borderlessButtonStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="4dp"
                android:layout_weight="1"
                android:text="@string/deleteButtonCaptionText"
                app:icon="@drawable/ic_delete"
                app:iconSize="8dp" />
        </LinearLayout>
    </LinearLayout>

</com.google.android.material.card.MaterialCardView>